--- a/themes/profumo-labo/_dev/css/theme/utility/_variable.scss
+++ b/themes/profumo-labo/_dev/css/theme/utility/_variable.scss
@@ -17,3 +17,5 @@ $dark-gray: #777777;
 $gray: #969696;
 $brown: #CCB48F;
 $red: #f00000;
+
+$border-bottom-mobile: 1px solid rgba(0, 0, 0, 0.07);
